fixed issues on smaller screen

--- a/css/styles.css
+++ b/css/styles.css
@@ -181,7 +181,7 @@ footer hr{
 }
 
 .about-div{
-    min-width: 300px;
+    min-width: 200px;
     max-height: fit-content;
     border-radius: 10px;
     box-shadow: inset 5px 5px 4px #d0d1d2,
